# klassez

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  PKG-INFO  README.md  kz_environment.yml  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
docs/: requirements.txt
docs/source/: Spectra.rst  anal.rst  conf.py  config.rst  figures.rst  fit.rst  gui.rst  guide_figs.rst  index.rst  installation.rst  intro_klassez.rst  misc.rst  mof_list.rst  processing.rst  sim.rst  userguide.rst
docs/source/_static/: custom.css
klassez/: Spectra.py  __init__.py  anal.py  config.py  figures.py  fit.py  gui.py  misc.py  processing.py  qsin.py  sim.py
klassez.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
klassez/.old_and_unused/: fit.py  misc.py  processing.py
klassez/tables/: gamma.dic  nuclei_jeol.dic  xterm_colors
klassez/test/: T1_90.00.procs  acqus_1D.procs  acqus_2D  test.py
test/: T2_10.00.procs  acqus_1D  acqus_1D.procs  acqus_2D.procs  fit_1D.py  read_process_1D.py  read_process_2D.py  test.py
